--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express"   : "latest",
 	"pg"		: "latest",
-	"body-parser" : "latest"
+	"body-parser" : "latest",
+	"async" : "latest"
   }
 }
